add fonts adn create html code of header + offer blocks

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
         <title>Marin</title>
     </head>
     <body>
-        
+        <header class="center header">
+            <a href="#" class="logo">
+                <img src="images/header_logo.svg" alt="logo">
+            </a>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Главная</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Мероприятия</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Контакты</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Блог</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main >            
+            <section class="center offer">                
+                <h1 class="offer__title">Ваш личный психолог В Кривом Роге</h1>
+                <p class="offer__desc">Личные, семейные и групповые консультаци</p>
+                <a href="#" class="btn">
+                    УЗНАТЬ БОЛЬШЕ
+                </a>
+            </section>
+        </main>
     </body>
 </html>
