--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav__link">Главная</a>
+                        <a href="#" class="nav__link nav__link_active">Главная</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Мероприятия</a>
