create services blok

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
                     УЗНАТЬ БОЛЬШЕ
                 </a>
             </section>
+            <section class="center services">
+                <article class="services__item">
+                    <img src="images/services_goal.svg" alt="#" class="services__icon">
+                    <h2 class="services__title">Личные консультации</h2>
+                    <p class="services__desc">Достижения поставленных целей
+                        бывает сложной задачей, но при правильной поддержке нет ничего не возможного</p>
+                </article>
+                <article class="services__item">
+                    <img src="images/sarvices_family.svg" alt="#" class="services__icon">
+                    <h2 class="services__title">Семейная терапия</h2>
+                    <p class="services__desc">У любой семьи бывают кризисные ситуации, поэтому в такие моменты важно поддерживать друг друга</p>
+                </article>
+                <article class="services__item">
+                    <img src="images/services_network.svg" alt="#" class="services__icon">
+                    <h2 class="services__title">Сенситивные группы</h2>
+                    <p class="services__desc">Групповые занятия — отличное место, чтобы научиться общаться с окружающими людьми и раскрыть свой потенциал</p>
+                </article>
+            </section>
         </main>
     </body>
 </html>
