create about blok

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
                     <p class="services__desc">Групповые занятия — отличное место, чтобы научиться общаться с окружающими людьми и раскрыть свой потенциал</p>
                 </article>
             </section>
+            <section class="center about">
+                <img src="images/about_1.jpg" alt="Foto" class="about__foto">
+                <article class="about__left">
+                    <h3 class="about__title">Немного обо мне</h3>
+                    <p class="about__desc">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо.</p>
+                    <div class="about__btns">
+                        <a href="#" class="btn btn-glass">
+                            Задать вопрос
+                        </a>
+                        <a href="#" class="btn btn-about">
+                            Хочу консультацию
+                        </a>
+                    </div>
+                </article>
+            </section>
         </main>
     </body>
 </html>
