fix custom checkboc in register

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                         <textarea id="comments" name="comments" class="register__input register__input-textarea" placeholder="Пожелания"></textarea>
                         
                     <div class="register__chekblock">
-                        <label class="register__checkbox">
-                            <input type="checkbox" id="privacy" name="privacy" class="register__check visually-hidden" required>
-                            <span class="register__label">Я согласен с политикой конфиденциальности</span>
+                        <input type="checkbox" id="privacy" name="privacy" class="register__check" required>
+                        <label for="privacy" class="register__checkbox">
+                            Я согласен с политикой конфиденциальности
                         </label>
                     </div>
 
