create block counters and add style to him

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
                     </a>    
                 </article>
             </section>
-
             <section class="register center">
                 <h2 class="register__title">Записаться на прием</h2>                
                 <form class="register__form">
@@ -94,6 +93,23 @@
 
                     <button type="submit" class="btn register__btn">Отправить</button>
                 </form>
+            </section>
+            <section class="counters center">
+                <article class="counters__item">
+                    <h4 class="counters__title">120 мин</h4>
+                    <h5 class="counters__sub-title">Время консультации</h5>
+                    <p class="counters__desc">Оптимально для того, чтобы найти выход и сделать очередной шаг</p>
+                </article>
+                <article class="counters__item">
+                    <h4 class="counters__title">от 200 грн</h4>
+                    <h5 class="counters__sub-title">Стоимость</h5>
+                    <p class="counters__desc">Цена доступна для любого человека, нуждающего в помощи</p>
+                </article>
+                <article class="counters__item">
+                    <h4 class="counters__title">75+</h4>
+                    <h5 class="counters__sub-title">Довольных клиентов</h5>
+                    <p class="counters__desc">Результат — улыбка на лице и ощущение счастья</p>
+                </article>
             </section>
         </main>
     </body>
