--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
                     <p class="counters__desc">Результат — улыбка на лице и ощущение счастья</p>
                 </article>
             </section>
+            <section class="reviews center">
+                <h3 class="reviews__title">Отзывы клиентов</h3>
+                <article class="reviews__slider">
+                    <img src="images/reviews_left.svg" alt="left" class="reviews__arrow-left">
+                    <div class="reviews__item">
+                        <div class="reviews__head">
+                            <img src="images/reviews_icon.png" alt="Avatar" class="reviews__icon">
+                            <p class="reviews__name">Марина, 25 лет</p>
+                        </div>
+                        <p class="reviews__desc">Обратилась к Сергею, потому что нервы уже были на пределе. Ситуация казалась мне безвыходной – несмотря на то, что я работаю и учусь. Сама не заметила, как избавилась от огромного кома. Наконец-то увидела выход из сложившейся ситуации и теперь есть надежда... Большое спасибо Валентину.</p>
+                    </div>
+                    <img src="images/reviews_right.svg" alt="right" class="reviews__arrow-right">
+                </article>
+            </section>
         </main>
     </body>
 </html>
