create block articles and add style to him

--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@
                     <img src="images/reviews_right.svg" alt="right" class="reviews__arrow-right">
                 </article>
             </section>
+            <section class="articles center">
+                <h4 class="articles__title">Последние статьи</h4>
+                <article class="articles__items">
+                    <div class="articles__item">
+                        <img src="images/articles_news-1.jpg" alt="logo1" class="articles__logo">
+                        <h5 class="articles__desc">Жить, а не бояться:<br>как справляться с канцерофобией</h5>
+                    </div>
+                    <div class="articles__item">
+                        <img src="images/articles_news-2.jpg" alt="logo2" class="articles__logo">
+                        <h5 class="articles__desc">Брат мой, враг мой: почему враждуют братья и сестры?</h5>
+                    </div>
+                    <div class="articles__item">
+                        <img src="images/articles_news-3.jpg" alt="logo3" class="articles__logo">
+                        <h5 class="articles__desc">8 советов, как оставаться продуктивным и не сойти с ума</h5>
+                    </div>
+                </article>
+            </section>
         </main>
     </body>
 </html>
