--- a/index.html
+++ b/index.html
@@ -142,6 +142,49 @@
                     </div>
                 </article>
             </section>
+            <section class="faq center">
+                <h3 class="faq__header">Частые вопросы</h3>
+                <details open class="faq__item">
+                    <summary class="faq__question">
+                        <span class="faq__marker">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="black">
+                            <path d="M18.9146 8.6046H11.3953V1.08527C11.3953 0.742732 10.9302 0 9.99999 0C9.06977 0 8.60463 0.742772 8.60463 1.08527V8.60464H1.0853C0.742803 8.6046 3.05176e-05 9.06973 3.05176e-05 9.99992C3.05176e-05 10.9301 0.742803 11.3953 1.0853 11.3953H8.60467V18.9146C8.60467 19.2571 9.06977 19.9999 10 19.9999C10.9303 19.9999 11.3954 19.2571 11.3954 18.9146V11.3953H18.9148C19.2572 11.3953 20 10.9302 20 9.99992C20 9.06965 19.2571 8.6046 18.9146 8.6046Z"/></svg>
+                        </span>
+                        <span class="faq__title">Какой у вас график работы? </span>
+                    </summary>
+                    <p class="faq__answer">Я работаю провожу консультации с понедельника по субботу с 15:00 до 21:00. Записаться на прием можно в любой день с 9:00 до 21:00</p>
+                </details>
+                <details class="faq__item">
+                    <summary class="faq__question">
+                        <span class="faq__marker">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="black">
+                            <path d="M18.9146 8.6046H11.3953V1.08527C11.3953 0.742732 10.9302 0 9.99999 0C9.06977 0 8.60463 0.742772 8.60463 1.08527V8.60464H1.0853C0.742803 8.6046 3.05176e-05 9.06973 3.05176e-05 9.99992C3.05176e-05 10.9301 0.742803 11.3953 1.0853 11.3953H8.60467V18.9146C8.60467 19.2571 9.06977 19.9999 10 19.9999C10.9303 19.9999 11.3954 19.2571 11.3954 18.9146V11.3953H18.9148C19.2572 11.3953 20 10.9302 20 9.99992C20 9.06965 19.2571 8.6046 18.9146 8.6046Z"/></svg>
+                        </span>
+                        <span class="faq__title">Сколько длится сессия?</span>
+                    </summary>
+                    <p class="faq__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam et aliquam ut? Dolorum, possimus? Culpa magnam est, debitis mollitia facilis veniam, dignissimos earum labore obcaecati consectetur quidem voluptatibus modi iusto.</p>
+                </details>
+                <details class="faq__item">
+                    <summary class="faq__question">
+                        <span class="faq__marker">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="black">
+                            <path d="M18.9146 8.6046H11.3953V1.08527C11.3953 0.742732 10.9302 0 9.99999 0C9.06977 0 8.60463 0.742772 8.60463 1.08527V8.60464H1.0853C0.742803 8.6046 3.05176e-05 9.06973 3.05176e-05 9.99992C3.05176e-05 10.9301 0.742803 11.3953 1.0853 11.3953H8.60467V18.9146C8.60467 19.2571 9.06977 19.9999 10 19.9999C10.9303 19.9999 11.3954 19.2571 11.3954 18.9146V11.3953H18.9148C19.2572 11.3953 20 10.9302 20 9.99992C20 9.06965 19.2571 8.6046 18.9146 8.6046Z"/></svg>
+                        </span>
+                        <span class="faq__title">Сколько стоит консультация?</span>
+                    </summary>
+                    <p class="faq__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam et aliquam ut? Dolorum, possimus? Culpa magnam est, debitis mollitia facilis veniam, dignissimos earum labore obcaecati consectetur quidem voluptatibus modi iusto.</p>
+                </details>
+                <details class="faq__item">
+                    <summary class="faq__question">
+                        <span class="faq__marker">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="black">
+                            <path d="M18.9146 8.6046H11.3953V1.08527C11.3953 0.742732 10.9302 0 9.99999 0C9.06977 0 8.60463 0.742772 8.60463 1.08527V8.60464H1.0853C0.742803 8.6046 3.05176e-05 9.06973 3.05176e-05 9.99992C3.05176e-05 10.9301 0.742803 11.3953 1.0853 11.3953H8.60467V18.9146C8.60467 19.2571 9.06977 19.9999 10 19.9999C10.9303 19.9999 11.3954 19.2571 11.3954 18.9146V11.3953H18.9148C19.2572 11.3953 20 10.9302 20 9.99992C20 9.06965 19.2571 8.6046 18.9146 8.6046Z"/></svg>
+                        </span>
+                        <span class="faq__title">Что из себя представляют консультации?</span>
+                    </summary>
+                    <p class="faq__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam et aliquam ut? Dolorum, possimus? Culpa magnam est, debitis mollitia facilis veniam, dignissimos earum labore obcaecati consectetur quidem voluptatibus modi iusto.</p>
+                </details>
+            </section>
         </main>
     </body>
 </html>
