--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             </section>
             <section class="register center">
                 <h2 class="register__title">Записаться на прием</h2>                
-                <form class="register__form">
-                    <input type="text" id="name" name="name" class="register__input" placeholder="Ваше имя *" required>
-                    <input type="tel" id="phone" name="phone" class="register__input" placeholder="Ваш телефон *" required>
+                <form class="form">
+                    <input type="text" id="name" name="name" class="form__input" placeholder="Ваше имя *" required>
+                    <input type="tel" id="phone" name="phone" class="form__input" placeholder="Ваш телефон *" required>
 
-                        <label class="register__input register__input-select">
+                        <label class="form__input form__input-select">
                             <select name="topic" required>
                                 <option value="" disabled selected>Выберите тему встречи *</option>
                                 <option value="option1">Тема 1</option>
@@ -82,11 +82,11 @@
                             </select>
                         </label>
                         
-                        <textarea id="comments" name="comments" class="register__input register__input-textarea" placeholder="Пожелания"></textarea>
+                        <textarea id="comments" name="comments" class="form__input form__input-textarea" placeholder="Пожелания"></textarea>
                         
-                    <div class="register__chekblock">
-                        <input type="checkbox" id="privacy" name="privacy" class="register__check" required>
-                        <label for="privacy" class="register__checkbox">
+                    <div class="form__chekblock">
+                        <input type="checkbox" id="privacy" name="privacy" class="form__check" required>
+                        <label for="privacy" class="form__checkbox">
                             Я согласен с политикой конфиденциальности
                         </label>
                     </div>
@@ -184,6 +184,42 @@
                     </summary>
                     <p class="faq__answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam et aliquam ut? Dolorum, possimus? Culpa magnam est, debitis mollitia facilis veniam, dignissimos earum labore obcaecati consectetur quidem voluptatibus modi iusto.</p>
                 </details>
+            </section>
+            <section class="address">
+                <article class="address__contact">
+                    <h3 class="address__title">Контакты</h3>
+                    <p class="address__item">
+                        Тел: <a href="tel:+380991234567" class="address__link">+380 99 123 45 67</a>
+                    </p>
+                    <p class="address__item">
+                        Viber: <a href="viber://chat?number=+380991234567" target="_blank" class="address__link">+380 99 123 45 67</a>
+                    </p>
+                    <p class="address__item">
+                        Telegram: <a href="https://t.me/phyholog_sergei" target="_blank" class="address__link">@phyholog_sergei</a>
+                    </p>
+                    <p class="address__item">
+                        Instagram: <a href="https://www.instagram.com/phyholog_sergei/" target="_blank" class="address__link">@phyholog_sergei</a>
+                    </p>
+                    <p class="address__item">
+                        E-mail: <a href="mailto:phyholog_sergei@gmail.com" class="address__link">phyholog_sergei@gmail.com</a>
+                    </p>                    
+                    <p class="address__item">Адрес: Ул. Центральная д. 10, офис 1</p>
+                </article>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d945.6074449702548!2d33.33121948454347!3d47.905780123141085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dad8b426003a85%3A0xb922b1eee523d63e!2z0YPQuy4g0KHQstGP0YLQvi3QndC40LrQvtC70LDQtdCy0YHQutCw0Y8sIDEwLCDQmtGA0LjQstC-0Lkg0KDQvtCzLCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNTAwMDA!5e0!3m2!1sru!2sua!4v1699468686327!5m2!1sru!2sua" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+            <section class="appointmen center">
+                <h3 class="appointmen__title">Записаться со скидкой 50 грн</h3>
+                <form class="form appointmen__form">
+                    <input type="text" id="name" name="name" class="form__input appointmen_input" placeholder="Ваше имя *" required>
+                    <input type="tel" id="phone" name="phone" class="form__input appointmen_input" placeholder="Ваш телефон *" required>
+                    <button type="submit" class="btn appointmen__btn">Записаться со скидкой</button>
+                    <div class="form__chekblock appointmen__chekblock">
+                        <input type="checkbox" id="privacy_bottom" name="privacy" class="form__check" required>
+                        <label for="privacy_bottom" class="form__checkbox">
+                            Я согласен с политикой конфиденциальности
+                        </label>
+                    </div>
+                </form>
             </section>
         </main>
     </body>
