create block footer and add style to him

--- a/index.html
+++ b/index.html
@@ -221,6 +221,27 @@
                     </div>
                 </form>
             </section>
+            <footer class="footer center">
+                <a href="#" class="logo footer__logo">
+                    <img src="images/header_logo.svg" alt="logo">
+                </a>
+                <div class="footer__item">
+                    <img src="images/inst.svg" alt="">
+                    <a href="https://www.instagram.com/phyholog_sergei/" target="_blank" class="footer__link">@phyholog_sergei</a>
+                </div>
+                <div class="footer__item">
+                    <img src="images/viber.svg" alt="">
+                    <a href="viber://chat?number=+380991234567" target="_blank" class="footer__link">+380 99 123 45 67</a>
+                </div>
+                <div class="footer__item">
+                    <img src="images/telegram.svg" alt="">
+                    <a href="https://t.me/phyholog_sergei" target="_blank" class="footer__link">@phyholog_sergei</a>
+                </div>
+                <div class="footer__item">
+                    <img src="images/tel.svg" alt="">
+                    <a href="tel:+380991234567" class="footer__link">+380 99 123 45 67</a>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
