Fix some block in html & css

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
                     <input type="text" id="name" name="name" class="form__input" placeholder="Ваше имя *" required>
                     <input type="tel" id="phone" name="phone" class="form__input" placeholder="Ваш телефон *" required>
 
-                        <label class="form__input form__input-select">
-                            <select name="topic" required>
-                                <option value="" disabled selected>Выберите тему встречи *</option>
-                                <option value="option1">Тема 1</option>
-                                <option value="option2">Тема 2</option>
-                                <option value="option3">Тема 3</option>
-                            </select>
-                        </label>
+                    <label class="form__input form__input-select">
+                        <select name="topic" required>
+                            <option value="" disabled selected>Тема встречи *</option>
+                            <option value="option1">Тема 1</option>
+                            <option value="option2">Тема 2</option>
+                            <option value="option3">Тема 3</option>
+                        </select>
+                    </label>
                         
-                        <textarea id="comments" name="comments" class="form__input form__input-textarea" placeholder="Пожелания"></textarea>
+                    <textarea id="comments" name="comments" class="form__input form__input-textarea" placeholder="Пожелания"></textarea>
                         
                     <div class="form__chekblock">
                         <input type="checkbox" id="privacy" name="privacy" class="form__check" required>
