add style of adptiv for 1024px max

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                         
                     <div class="form__chekblock">
-                        <input type="checkbox" id="privacy" name="privacy" class="form__check" required>
+                        <input type="checkbox" id="privacy" name="privacy" class="form__check visually-hidden" required>
                         <label for="privacy" class="form__checkbox">
                             Я согласен с политикой конфиденциальности
                         </label>
@@ -207,7 +207,7 @@
                     </p>                    
                     <p class="address__item">Адрес: Ул. Центральная д. 10, офис 1</p>
                 </article>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d945.6074449702548!2d33.33121948454347!3d47.905780123141085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dad8b426003a85%3A0xb922b1eee523d63e!2z0YPQuy4g0KHQstGP0YLQvi3QndC40LrQvtC70LDQtdCy0YHQutCw0Y8sIDEwLCDQmtGA0LjQstC-0Lkg0KDQvtCzLCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNTAwMDA!5e0!3m2!1sru!2sua!4v1699468686327!5m2!1sru!2sua" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="address__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d945.6074449702548!2d33.33121948454347!3d47.905780123141085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dad8b426003a85%3A0xb922b1eee523d63e!2z0YPQuy4g0KHQstGP0YLQvi3QndC40LrQvtC70LDQtdCy0YHQutCw0Y8sIDEwLCDQmtGA0LjQstC-0Lkg0KDQvtCzLCDQlNC90LXQv9GA0L7Qv9C10YLRgNC-0LLRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNTAwMDA!5e0!3m2!1sru!2sua!4v1699468686327!5m2!1sru!2sua" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
             <section class="appointmen center">
                 <h3 class="appointmen__title">Записаться со скидкой 50 грн</h3>
@@ -218,7 +218,7 @@
                         <button type="submit" class="btn appointmen__btn">Записаться со скидкой</button>
                     </div>
                     <div class="form__chekblock appointmen__chekblock">
-                        <input type="checkbox" id="privacy_bottom" name="privacy" class="form__check" required>
+                        <input type="checkbox" id="privacy_bottom" name="privacy" class="form__check visually-hidden" required>
                         <label for="privacy_bottom" class="form__checkbox">
                             Я согласен с политикой конфиденциальности
                         </label>
